# yolov5_ros2_detector

./: .gitignore  README.md  obj_ros_two.py
boundingboxes/: CMakeLists.txt
vision_interfaces/: CMakeLists.txt  package.xml
vision_interfaces/srv/: GetPose.srv  SegmentImage.srv
yolov5_ros2/: package.xml  setup.py
yolov5_ros2/launch/: yolov5_ros2_node.launch.py
yolov5_ros2/utils/: general.py  plots.py  torch_utils.py
yolov5_ros2/yolov5_ros2/: obj_detect.py
